--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
@@ -7,32 +10,61 @@ charset-normalizer==3.4.0
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.2
+fastapi-cli==0.0.5
 fiona==1.10.1
+frozenlist==1.4.1
 geographiclib==2.0
 geopandas==0.14.4
 geopy==2.4.1
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
+Jinja2==3.1.4
 joblib==1.4.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+mdurl==0.1.2
+multidict==6.1.0
 networkx==3.3
 numpy==1.26.4
 osmnx==1.9.4
 packaging==24.1
 pandas==2.2.3
+pluggy==1.5.0
+propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
 pyproj==3.7.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.12
 pytz==2024.2
+PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.2
 Rtree==1.3.0
 scikit-learn==1.5.2
 scipy==1.14.1
 shapely==2.0.6
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.39.2
 threadpoolctl==3.5.0
+typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websockets==13.1
+yarl==1.15.2
